# travel-insurance

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
travelinsurance/: hooks.py  modules.txt
travelinsurance/config/: desktop.py  docs.py
